odkaz na MAWS ma ikonku
Signed-off-by: Kojotak <Kojotak@KOJOT_R61>

--- a/src/cz/kojotak/arx/properties/Icons.properties
+++ b/src/cz/kojotak/arx/properties/Icons.properties
@@ -37,6 +37,7 @@ GUIIcons.REFRESH=silk/arrow_refresh.png
 GUIIcons.DETAIL=silk/magnifier.png
 GUIIcons.PREFERENCES=silk/cog.png
 GUIIcons.FILTER=aspneticons/filter-1.png
+GUIIcons.EXTERNAL_LINK=External.png
 
 UpdateActionIcons.PROGRAM=silk/application_view_columns.png
 UpdateActionIcons.DATABASE=silk/database_refresh.png
