--- a/.classpath
+++ b/.classpath
@@ -12,15 +12,15 @@
 	<classpathentry kind="lib" path="lib/runtime/image4j.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/js.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="lib/runtime/swingx-1.6.jar" sourcepath="lib/devel/swingx-1.6-src.zip">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ARX/lib/devel/swingx-1.6-javadoc.zip!/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/devel/lombok.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/eventbus-1.4.jar" sourcepath="lib/devel/eventbus-1.4-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/ARX/lib/devel/eventbus-1.4-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/runtime/swingx-core-1.6.2.jar" sourcepath="lib/devel/swingx-1.6.2-sources.zip">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/prace/workspace/ARX/lib/devel/swingx-1.6.2-javadoc.zip!/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
