moznost pridat sloupce delky rekordu v tabulce rekordu
Signed-off-by: Tom <Tom@KOJOT_R61>

--- a/src/cz/kojotak/arx/properties/Localization.properties
+++ b/src/cz/kojotak/arx/properties/Localization.properties
@@ -75,13 +75,21 @@ RecordPlayerColumn.WIDTH     = 40
 RecordPlayerColumn.WIDTH_MAX = 40
 RecordPlayerColumn.WIDTH_MIN = 40
 
-RecordPositionWithIconColumn.WIDTH = 30
+RecordDurationColumn.WIDTH     = 60
+RecordDurationColumn.WIDTH_MAX = 60
+RecordDurationColumn.WIDTH_MIN = 60
+
+RecordPositionWithIconColumn.WIDTH = 35
+RecordPositionWithIconColumn.WIDTH_MAX = 35
+RecordPositionWithIconColumn.WIDTH_MIN = 35
 
 RelativePositionColumn.WIDTH     = 42
 RelativePositionColumn.WIDTH_MAX = 42
 RelativePositionColumn.WIDTH_MIN = 42
 
 ScoreRecordColumn.WIDTH = 80
+ScoreRecordColumn.WIDTH_MAX = 80
+ScoreRecordColumn.WIDTH_MAX = 80
 
 ScoreStatisticsColumn.WIDTH     = 80
 ScoreStatisticsColumn.WIDTH_MAX = 80
