popisek sloupce dohran + defaultne je schovany přidán sloupec "dohráno" do tabulky rekordů
Signed-off-by: Tom <Tom@KOJOT_R61>

--- a/src/cz/kojotak/arx/properties/Localization.properties
+++ b/src/cz/kojotak/arx/properties/Localization.properties
@@ -46,6 +46,10 @@ FinishedColumn.WIDTH     = 20
 FinishedColumn.WIDTH_MAX = 20
 FinishedColumn.WIDTH_MIN = 20
 
+FinishedRecordColumn.WIDTH     = 20
+FinishedRecordColumn.WIDTH_MAX = 20
+FinishedRecordColumn.WIDTH_MIN = 20
+
 GameNameColumn.WIDTH = 200
 
 
