--- a/src/cz/kojotak/arx/properties/Localization.properties
+++ b/src/cz/kojotak/arx/properties/Localization.properties
@@ -79,6 +79,10 @@ RecordPlayerColumn.WIDTH     = 40
 RecordPlayerColumn.WIDTH_MAX = 40
 RecordPlayerColumn.WIDTH_MIN = 40
 
+CoplayerColumn.WIDTH     = 40
+CoplayerColumn.WIDTH_MAX = 40
+CoplayerColumn.WIDTH_MIN = 40
+
 RecordDurationColumn.WIDTH     = 60
 RecordDurationColumn.WIDTH_MAX = 60
 RecordDurationColumn.WIDTH_MIN = 60
