opraveny popisky sloupcu ve sprave sloupcu tabulky rekordu
Signed-off-by: Tom <Tom@KOJOT_R61>

--- a/src/cz/kojotak/arx/properties/Localization.properties
+++ b/src/cz/kojotak/arx/properties/Localization.properties
@@ -79,6 +79,10 @@ RecordPlayerColumn.WIDTH     = 40
 RecordPlayerColumn.WIDTH_MAX = 40
 RecordPlayerColumn.WIDTH_MIN = 40
 
+Record2PFirstPlayerColumn.WIDTH     = 40
+Record2PFirstPlayerColumn.WIDTH_MAX = 40
+Record2PFirstPlayerColumn.WIDTH_MIN = 40
+
 CoplayerColumn.WIDTH     = 40
 CoplayerColumn.WIDTH_MAX = 40
 CoplayerColumn.WIDTH_MIN = 40
