--- a/src/cz/kojotak/arx/properties/Licence.properties
+++ b/src/cz/kojotak/arx/properties/Licence.properties
@@ -2,6 +2,10 @@ EVENT_BUS.URL=http://www.eventbus.org/
 EVENT_BUS.NAME=Event bus
 EVENT_BUS.LIC=Apache License, Version 2.0
 
+FAMFAMFAM.URL=http://www.famfamfam.com/lab/icons/silk/
+FAMFAMFAM.NAME=FamFamFam Silk icons
+FAMFAMFAM.LIC=Creative Commons Attribution 2.5 License
+
 SWING_X.URL=http://java.net/projects/swingx/
 SWING_X.NAME=SwingX
 SWING_X.LIC=LGPL v2.1
@@ -17,6 +21,10 @@ LOMBOK.LIC=The MIT License
 LOG4J.URL=http://logging.apache.org/log4j/1.2/index.html
 LOG4J.NAME=Log4j
 LOG4J.LIC=Apache License, Version 2.0
+
+MAMU.URL=http://icons.mameworld.info/
+MAMU.NAME=Mamu's MAME icons
+MAMU.LIC=?
 
 ROTAXMAME.URL=http://rotaxmame.cz
 ROTAXMAME.NAME=Rotaxmame
