--- a/.classpath
+++ b/.classpath
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/runtime/CHMPane_alpha2.jar"/>
-	<classpathentry kind="lib" path="lib/runtime/image4j.jar"/>
-	<classpathentry kind="lib" path="lib/runtime/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="lib/devel/lombok.jar"/>
-	<classpathentry kind="lib" path="lib/runtime/eventbus-1.4.jar" sourcepath="lib/devel/eventbus-1.4-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ARX/lib/devel/eventbus-1.4-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="lib/runtime/swingx-core-1.6.2.jar" sourcepath="lib/devel/swingx-1.6.2-sources.zip">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/C:/prace/workspace/ARX/lib/devel/swingx-1.6.2-javadoc.zip!/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="res"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
