--- a/pom.xml
+++ b/pom.xml
@@ -28,37 +28,29 @@
 		<plugins>
 			<plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-dependency-plugin</artifactId>
+			    <artifactId>maven-assembly-plugin</artifactId>
 			    <executions>
 			        <execution>
-			            <id>copy-dependencies</id>
-			            <phase>prepare-package</phase>
+			            <phase>package</phase>
 			            <goals>
-			                <goal>copy-dependencies</goal>
+			                <goal>single</goal>
 			            </goals>
 			            <configuration>
-			                <outputDirectory>
-			                    ${project.build.directory}/libs
-			                </outputDirectory>
+			                <archive>
+			                <manifest>
+			                    <mainClass>
+			                        cz.kojotak.arx.DesktopRunner
+			                    </mainClass>
+			                </manifest>
+			                </archive>
+			                <descriptorRefs>
+			                    <descriptorRef>jar-with-dependencies</descriptorRef>
+			                </descriptorRefs>
 			            </configuration>
 			        </execution>
 			    </executions>
 			</plugin>
-			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-jar-plugin</artifactId>
-			    <configuration>
-			        <archive>
-			            <manifest>
-			                <addClasspath>true</addClasspath>
-			                <classpathPrefix>libs/</classpathPrefix>
-			                <mainClass>
-			                    cz.kojotak.arx.DesktopRunner
-			                </mainClass>
-			            </manifest>
-			        </archive>
-			    </configuration>
-			</plugin>
+						
 								
 		</plugins>
 	</build>
