--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,5 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
+#
+# heavily inspired from https://github.com/wiverson/maven-jpackage-template/blob/main/.github/workflows/maven-build-installer-windows.yml
 
 name: Java CI with Maven
 
@@ -12,9 +14,23 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
+    - name: Download Wix
+      uses: i3h/download-release-asset@v1
+      with:
+        owner: wixtoolset
+        repo: wix3
+        tag: wix3112rtm
+        file: wix311-binaries.zip
+    - name: Decompress Wix
+      uses: DuckSoft/extract-7z-action@v1.0
+      with:
+        pathSource: wix311-binaries.zip
+        pathTarget: ./target/wix
+    - name: Add Wix to Path
+      run: echo "$HOME/target/wix" >> $GITHUB_PATH
     - uses: actions/checkout@v2
     - name: Set up JDK 16
       uses: actions/setup-java@v2
