--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,6 +39,8 @@ jobs:
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Create windows executable
+      run: jpackage --name arx --input . --main-jar /home/runner/work/ARX/ARX/target/*-jar-with-dependencies.jar --main-class cz.kojotak.arx.DesktopRunner --win-console
     - name: Upload Artifact GitHub Action
       uses: actions/upload-artifact@v2
       with: 
