--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
 			                <descriptorRefs>
 			                    <descriptorRef>jar-with-dependencies</descriptorRef>
 			                </descriptorRefs>
+					    
+					<!-- next 2 lines are from https://stackoverflow.com/questions/33673260/override-maven-assembly-plugin-output-file-name -->
+					<finalName>arx</finalName>
+    					<appendAssemblyId>false</appendAssemblyId>    
 			            </configuration>
 			        </execution>
 			    </executions>
