--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,9 +40,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Create windows executable
-      run: jpackage --name arx --input . --main-jar /home/runner/work/ARX/ARX/target/*-jar-with-dependencies.jar --main-class cz.kojotak.arx.DesktopRunner --win-console
+      run: jpackage --name arx --input . --main-jar /home/runner/work/ARX/ARX/target/arx.jar --main-class cz.kojotak.arx.DesktopRunner --win-console
     - name: Upload Artifact GitHub Action
       uses: actions/upload-artifact@v2
       with: 
         name: assets-for-download
-        path: /home/runner/work/ARX/ARX/target/*-jar-with-dependencies.jar
+        path: /home/runner/work/ARX/ARX/target/*.exe
