--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Create windows executable
-      run: jpackage --name arx --input . --main-jar /home/runner/work/ARX/ARX/target/arx.jar --main-class cz.kojotak.arx.DesktopRunner --win-console
+      run: jpackage --name arx --input . --main-jar D:\a\ARX\ARX\target\arx.jar --main-class cz.kojotak.arx.DesktopRunner --win-console
     - name: Upload Artifact GitHub Action
       uses: actions/upload-artifact@v2
       with: 
