--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,4 +45,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with: 
         name: assets-for-download
-        path: /home/runner/work/ARX/ARX/target/*.exe
+        path: D:\a\ARX\ARX\target\*.exe
