--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,8 +39,12 @@ jobs:
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Post maven check
+      run: tree D:\a\ARX\ARX\target /f
     - name: Create windows executable
       run: jpackage --name arx --input . --main-jar D:\a\ARX\ARX\target\arx.jar --main-class cz.kojotak.arx.DesktopRunner --win-console
+    - name: Post jpackage check
+      run: tree D:\a\ARX\ARX\target /f
     - name: Upload Artifact GitHub Action
       uses: actions/upload-artifact@v2
       with: 
