--- a/pom.xml
+++ b/pom.xml
@@ -84,5 +84,10 @@
 		    <artifactId>log4j-core</artifactId>
 		    <version>2.14.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.xerial</groupId>
+		    <artifactId>sqlite-jdbc</artifactId>
+		    <version>3.36.0</version>
+		</dependency>
 	</dependencies>
 </project>
