--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,9 +40,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Create windows executable
-      run: jpackage --type exe --name arx --input . --main-jar D:\a\ARX\ARX\target\arx.jar --main-class cz.kojotak.arx.DesktopRunner --win-console --dest D:\a\ARX\ARX\target\
+      run: jpackage --type exe --name arx --input D:\a\ARX\ARX\target\assembly --main-jar arx.jar --main-class cz.kojotak.arx.DesktopRunner --win-console --dest D:\a\ARX\ARX\target\assembly
     - name: Upload Artifact GitHub Action
       uses: actions/upload-artifact@v2
       with: 
         name: assets-for-download
-        path: D:\a\ARX\ARX\target\*.exe
+        path: D:\a\ARX\ARX\target\assembly\*.exe
