migrated from log4j2 to java.util.logging

--- a/src/logging.properties
+++ b/src/logging.properties
@@ -17,8 +17,6 @@
 # show messages at the INFO and above levels.
 handlers= java.util.logging.ConsoleHandler
 
-# To also add the FileHandler, use the following line instead.
-#handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
 # Default global logging level.
 # This specifies which kinds of events are logged across
@@ -26,10 +24,9 @@ handlers= java.util.logging.ConsoleHandler
 # can be overriden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level= WARNING
+.level= INFO
 
-############################################################
-# Handler specific properties.
-# Describes specific configuration info for Handlers.
-############################################################
+cz.kojotak.arx.level = FINE
 
+java.util.logging.ConsoleHandler.level = FINE
+java.util.logging.ConsoleHandler.formatter = cz.kojotak.arx.util.ArxLogFormatter
