--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.kojotak</groupId>
-	<artifactId>ARX</artifactId>
+	<artifactId>arx</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<properties>
@@ -52,6 +52,9 @@
 	              
 	              <!-- not working for java 16 at the moment -->
 	              <!-- minimizeJar>true</minimizeJar-->
+	              
+	              <finalName>${project.artifactId}</finalName>
+                  <outputDirectory>target/assembly</outputDirectory>
 	            </configuration>
 		        <executions>
 		          <execution>
