NoncompetetiveGame was removed

--- a/src/cz/kojotak/arx/properties/Localization.properties
+++ b/src/cz/kojotak/arx/properties/Localization.properties
@@ -1,24 +1,24 @@
-Platform.ATARI=Atari
-Platform.ATARI2600=Atari 2600
-Platform.AMIGA=Amiga
-Platform.COLECO=Coleco
-Platform.C64= C64
-Platform.FLASH=Flash
-Platform.GAMEGEAR=Gamegear
-Platform.INTELLIVISION=Intellivision
-Platform.LYNX=Lynx
-Platform.PC_DOS= PC DOS
-Platform.GAMEBOY=Gameboy
-Platform.MAME=Arcade
-Platform.MASTERSYSTEM=MasterSystem
-Platform.MEGADRIVE=Megadrive
-Platform.MSX=MSX
-Platform.N64=N64
-Platform.NEOGEO=NeoGeo
-Platform.NES=NES
-Platform.PCENGINE=PCEngine
-Platform.SNES=SNES
-Platform.ZX=ZX Spectrum
+LegacyPlatform.ATARI=Atari
+LegacyPlatform.ATARI2600=Atari 2600
+LegacyPlatform.AMIGA=Amiga
+LegacyPlatform.COLECO=Coleco
+LegacyPlatform.C64= C64
+LegacyPlatform.FLASH=Flash
+LegacyPlatform.GAMEGEAR=Gamegear
+LegacyPlatform.INTELLIVISION=Intellivision
+LegacyPlatform.LYNX=Lynx
+LegacyPlatform.PC_DOS= PC DOS
+LegacyPlatform.GAMEBOY=Gameboy
+LegacyPlatform.MAME=Arcade
+LegacyPlatform.MASTERSYSTEM=MasterSystem
+LegacyPlatform.MEGADRIVE=Megadrive
+LegacyPlatform.MSX=MSX
+LegacyPlatform.N64=N64
+LegacyPlatform.NEOGEO=NeoGeo
+LegacyPlatform.NES=NES
+LegacyPlatform.PCENGINE=PCEngine
+LegacyPlatform.SNES=SNES
+LegacyPlatform.ZX=ZX Spectrum
 
 
 
