Added LegacyCategory for LegacyImporter

--- a/src/cz/kojotak/arx/properties/Icons.properties
+++ b/src/cz/kojotak/arx/properties/Icons.properties
@@ -3,20 +3,20 @@ Availibility.WORKING = silk/bullet_green.png
 Availibility.MISSING = silk/bullet_red.png
 Availibility.PRESENT = silk/bullet_blue.png
 
-Category.ZAVODNI=silk/car.png
-Category.BOJOVE=mamu/weststry.png
-Category.BLUDISTOVKY=mamu/grudge.png
-Category.RUZNE=mamu/trvwzh.png
-Category.PINBALY=mamu/timescan1.png
-Category.PLOSINOVKY=mamu/dkongjo1.png
-Category.LOGICKE=mamu/pzletime.png
-Category.STRILECKY=mamu/empcity.png
-Category.LETADLA=mamu/19xx.png
-Category.SPORTOVNI=silk/sport_soccer.png
-Category.MLATICKY=mamu/viofight.png
-Category.EROTICKE=silk/heart.png
-Category.HUDEBNI=silk/music.png
-Category.NEZARAZENE=mamu/trvwzh.png
+Category.1=silk/car.png
+Category.2=mamu/weststry.png
+Category.3=mamu/grudge.png
+Category.4=mamu/trvwzh.png
+Category.5=mamu/timescan1.png
+Category.6=mamu/dkongjo1.png
+Category.7=mamu/pzletime.png
+Category.8=mamu/empcity.png
+Category.9=mamu/19xx.png
+Category.10=silk/sport_soccer.png
+Category.11=mamu/viofight.png
+Category.12=silk/heart.png
+Category.16=silk/music.png
+Category.50=mamu/trvwzh.png
 
 FinishedStatus.SOME_BODY_FINISHED=silk/flag_red.png
 FinishedStatus.CURRENT_PLAYER_FINISHED=silk/rosette.png
@@ -46,8 +46,8 @@ UpdateActionIcons.AVAILIBILITY=silk/disk_multiple.png
 ImageDetail.MISSING=silk/cancel.png
 ImageDetail.PENDING=silk/hourglass.png
 
-Platform.NES=mamu/nes.png
-Platform.SNES=mamu/snes.png
-Platform.MEGADRIVE=mamu/megadriv.png
-Platform.GAMEBOY=mamu/gameboy.png
-Platform.C64=c64Logo.png
+Platform.18=mamu/nes.png
+Platform.19=mamu/snes.png
+Platform.14=mamu/megadriv.png
+Platform.10=mamu/gameboy.png
+Platform.4=c64Logo.png
