oprava sirky sloupcu
fixes #54

--- a/src/cz/kojotak/arx/properties/Localization.properties
+++ b/src/cz/kojotak/arx/properties/Localization.properties
@@ -25,9 +25,9 @@ AverageRatingsColumn.WIDTH     = 42
 AverageRatingsColumn.WIDTH_MAX = 42
 AverageRatingsColumn.WIDTH_MIN = 42
 
-BestPlayerColumn.WIDTH     = 40
-BestPlayerColumn.WIDTH_MAX = 40
-BestPlayerColumn.WIDTH_MIN = 40
+BestPlayerColumn.WIDTH     = 100
+BestPlayerColumn.WIDTH_MAX = 100
+BestPlayerColumn.WIDTH_MIN = 100
 
 CategoryColumn.WIDTH     = 22
 CategoryColumn.WIDTH_MAX = 22
@@ -50,7 +50,8 @@ FinishedRecordColumn.WIDTH_MAX = 20
 FinishedRecordColumn.WIDTH_MIN = 20
 
 GameNameColumn.WIDTH = 200
-
+GameNameColumn.WIDTH_MAX = 300
+GameNameColumn.WIDTH_MIN = 100
 
 LegacyInfoColumns.WIDTH = 40
 
@@ -74,13 +75,9 @@ PositionColumn.WIDTH     = 40
 PositionColumn.WIDTH_MAX = 40
 PositionColumn.WIDTH_MIN = 40
 
-RecordPlayerColumn.WIDTH     = 40
-RecordPlayerColumn.WIDTH_MAX = 40
-RecordPlayerColumn.WIDTH_MIN = 40
-
-Record2PFirstPlayerColumn.WIDTH     = 40
-Record2PFirstPlayerColumn.WIDTH_MAX = 40
-Record2PFirstPlayerColumn.WIDTH_MIN = 40
+RecordPlayerColumn.WIDTH     = 100
+RecordPlayerColumn.WIDTH_MAX = 100
+RecordPlayerColumn.WIDTH_MIN = 100
 
 CoplayerColumn.WIDTH     = 40
 CoplayerColumn.WIDTH_MAX = 40
