pridana ikona pro karetni hry

--- a/src/cz/kojotak/arx/properties/Icons.properties
+++ b/src/cz/kojotak/arx/properties/Icons.properties
@@ -17,6 +17,7 @@ Category.13=silk/sport_soccer.png
 Category.10=mamu/viofight.png
 Category.4=silk/heart.png
 Category.8=silk/music.png
+Category.9=mamu/ampkr2b2.ico
 
 
 FinishedStatus.SOME_BODY_FINISHED=silk/flag_red.png
