spousteni her pres rotaxmame
fixes #7

--- a/src/cz/kojotak/arx/properties/Icons.properties
+++ b/src/cz/kojotak/arx/properties/Icons.properties
@@ -39,7 +39,8 @@ GUIIcons.REFRESH=silk/arrow_refresh.png
 GUIIcons.DETAIL=silk/magnifier.png
 GUIIcons.PREFERENCES=silk/cog.png
 GUIIcons.FILTER=aspneticons/filter-1.png
-GUIIcons.EXTERNAL_LINK=External.png
+GUIIcons.EXTERNAL_LINK=silk/world_link.png
+GUIIcons.PLAY_BUTTON=silk/control_play_blue.png
 
 UpdateActionIcons.PROGRAM=silk/application_view_columns.png
 UpdateActionIcons.DATABASE=silk/database_refresh.png
